# stock-research

./: .gitignore  README.md  codex_task_prompt.md  move_map.yaml  validation_plan.md
platform/data/market-data-hub/: .gitignore  README.md  market-data-hub-dev-plan.md  pyproject.toml
platform/data/market-data-hub/configs/: cn.yaml  hk.yaml  us.yaml  us_russell1000.yaml
platform/data/market-data-hub/market_data_hub/: __init__.py  cli.py  config.py  exceptions.py  logging.py
platform/data/market-data-hub/scripts/: download_ams_3195_pdfs.py  parse_ams_3195_fertilizer.py
platform/data/market-data-hub/tests/: test_ams_documents.py  test_ams_fertilizer.py  test_cn_tushare_pipeline.py  test_config.py  test_cycle_data.py  test_parquet_exporter.py  test_schemas.py  test_sec_earnings.py  test_us_pipelines.py  test_us_validation_export.py  test_yahoo_chart_adapter.py
platform/ml/research-ml-core/: README.md  pyproject.toml
platform/ml/research-ml-core/tests/: test_features.py  test_import.py  test_labels.py  test_metrics.py  test_models_training.py  test_split.py
research/cycle/cycle-equity-research/: .gitignore  README.md  pyproject.toml
research/cycle/cycle-equity-research/configs/: README.md
research/cycle/cycle-equity-research/docs/: cf_dataset_plan.tex  cf_research_roadmap.md  data_aggregation_architecture.md
research/cycle/cycle-equity-research/scripts/: audit_cf_panels.py  build_cf_curated_panels.py  build_cf_dataset.py  build_cf_midcycle_ebitda.py  build_cf_nitrogen_proxies.py  build_cf_panels.py  build_cf_valuation_data.py  build_cf_valuation_range.py  check_cf_config.py  inspect_cf_datasets.py  run_cf_analysis.py  run_cf_cycle_state.py  run_cf_lead_lag_analysis.py  run_cf_lead_lag_stability.py  run_cf_operating_bridge_experiment.py  validate_cf_data.py
research/cycle/cycle-equity-research/tests/: test_cf_config.py  test_cf_financials.py  test_curated_panels.py  test_cycle_state.py  test_import.py  test_lead_lag_analysis.py  test_midcycle_valuation.py  test_nitrogen_features.py  test_operating_bridge_experiment.py  test_panel_audit.py  test_panel_quality.py  test_quality_report.py  test_stability_analysis.py  test_valuation_data.py  test_valuation_range.py
research/pattern/market_pattern_labeler/: .gitignore  README.md  pyproject.toml
research/pattern/market_pattern_labeler/docs/: architecture.md
research/pattern/market_pattern_labeler/tests/: test_bottom_base_breakout_miner.py  test_bottom_rebound_miner.py  test_build_ml_labels.py  test_check_data_dir.py  test_daily_loader.py  test_long_base_breakout_miner.py  test_negative_miners.py  test_plot_candidates.py  test_pullback_pattern_miner.py  test_range_support_rebound_miner.py  test_run_miner_optional_config.py  test_runup_rule.py  test_type_n_miner.py  test_type_v_negative_easy_miners.py  (+1 more)
(+397 files in other folders)
