[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-hub"
version = "0.1.0"
description = "Cross-market market data ingestion and normalization hub for type-n."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "pyarrow>=15.0",
  "pyyaml>=6.0",
  "tushare>=1.4.29",
  "yfinance>=0.2",
  "pydantic>=2.0",
  "certifi>=2024.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
market-data-hub = "market_data_hub.cli:main"

[tool.setuptools.packages.find]
include = ["market_data_hub*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
