[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-ml-core"
version = "0.1.0"
description = "Minimal reusable machine-learning primitives for stock research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
lightgbm = ["lightgbm>=4.0"]
xgboost = ["xgboost>=2.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
