[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cycle-equity-research"
version = "0.1.0"
description = "Cycle-equity research application skeleton"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
