[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-pattern-labeler"
version = "0.1.0"
description = "Market pattern candidate generator for daily stock data"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "market_pattern_labeler" }]
dependencies = [
  "matplotlib>=3.7",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "pyarrow>=10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
mplabeler = "market_pattern_labeler.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
